have boxes created for jeopardy just figuring out how to wrap correctly as needed for my game

--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
 body {
     background-color: aquamarine;
 }
+
+#container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+}
+
+
+.square {
+    
+    border: 2px solid orange;
+    height: 140px;
+    width: 200px;
+}
